Small changes from meeting

--- a/details.html
+++ b/details.html
@@ -140,64 +140,13 @@
         </table>
 
     </div>
-    <div class="container">
-        <h2 id="organizers">Organizers</h1>
-
-            <div class="row" style="max-width: 50%;">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <img class="card-img-top" src="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Dr. Eleanor "Nell" O'Rourke</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Assistant Professor, Computer Science and Learning
-                                Sciences, Northwestern University
-                            </h6>
-                            <p class="card-text"></p>
-                            <a href="http://eleanorourke.com/" target="_blank" class="btn btn-primary">Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <img class="card-img-top" src="https://melissaychen.com/assets/images/profile.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">Melissa Chen (she/her)</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">PhD Student, Computer Science, Northwestern
-                                University
-                            </h6>
-                            <p class="card-text">Melissa is a PhD student studying computer science in the <a
-                                    href="https://delta.northwestern.edu/" target="_blank">Delta Lab</a> at Northwestern
-                                University. Her work is on understanding how students evaluate their programming
-                                abilities,
-                                and
-                                how to design social and technical interventions to help students develop more accurate
-                                expectations
-                                for their programming abilities. </p>
-                            <a href="https://melissaychen.com/" target="_blank" class="btn btn-primary">Website</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-    </div>
 
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-muted">Self-assessment workshop | <a href="https://delta.northwestern.edu/"
-                    target="_blank">Delta Lab</a></p>
-
-            <a href="/"
-                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap" />
-                </svg>
-            </a>
-
-
-            <ul class="nav col-md-3 justify-content-end">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="details.html" class="nav-link px-2 text-muted">Details</a></li>
-                <li class="nav-item"><a href="research.html" class="nav-link px-2 text-muted">Research</a></li>
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-top pb-3 mb-3">
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="details.html" class="nav-link px-2 text-body-secondary">Details</a></li>
+                <li class="nav-item"><a href="research.html" class="nav-link px-2 text-body-secondary">Research</a></li>
             </ul>
         </footer>
     </div>
