--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             padding: 25%;
             position: relative;
             margin-bottom: 20px;
+
         }
 
         .speech-bubble::after {
@@ -82,51 +83,50 @@
                     heard things like this in our interviews:</p>
 
                 <div class="row">
-                    <div class=" col-sm-12 col-md-4 col-lg-2">
+                    <div class="col-sm-12 col-md-4 col-lg-2">
                         <div class="speech-bubble text-white" style="background-color: #f9f">
-                            <p>"I felt like I was behind and other people wouldn't take [...]
-                                as long." </p>
+                            <p><i>"I felt like I was behind and other people wouldn't take [...]
+                                    as long." </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
                         <div class="speech-bubble text-white" style="background-color: #99F">
-                            <p>"Having to use an outside resource [...] maybe I shouldn't have
-                                to use makes me feel like I could do better." </p>
+                            <p><i>"Having to use an outside resource [...] maybe I shouldn't have
+                                    to use makes me feel like I could do better." </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
                         <div class="speech-bubble text-white" style="background-color: #09f">
-                            <p>"If I'm really doing well, maybe I would just be able to figure
-                                it out as I'm coding and not have to stop." </p>
+                            <p><i>"If I'm really doing well, maybe I would just be able to figure
+                                    it out as I'm coding and not have to stop." </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
                         <div class="speech-bubble text-white" style="background-color: #09C">
-                            <p>"I [think] that programmers need to know every single little
-                                piece of syntax and every code and how to at least start doing everything."
-                            </p>
+                            <p><i>"I [think] that programmers need to know every single little
+                                    piece of syntax and every code and how to at least start doing everything."
+                                </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
                         <div class="speech-bubble text-white" style="background-color: #096">
-                            <p>"You think to yourself, 'oh, I should be understanding how to
-                                fix this. My friend would just do this right away.'" </p>
+                            <p><i>"You think to yourself, 'oh, I should be understanding how to
+                                    fix this. My friend would just do this right away.'" </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
                         <div class="speech-bubble text-white" style="background-color: #093">
-                            <p>"When I don't know where to begin or what I should write down
-                                first
-                                or import some data, I just feel like, 'oh, I'm really bad on programing.'"
+                            <p><i>"When I don't know where to begin or what I should write down
+                                    first
+                                    or import some data, I just feel like, 'oh, I'm really bad on programing.'"</i></p>
                         </div>
                     </div>
                 </div>
 
 
-                <p class="fs-5"> Even though we expect students to make mistakes, struggle, take
-                    time to work on assignments, and engage in other behaviors towards learning programming, <i>students
-                        think
-                        they are doing poorly when they engage in these typical moments in the programming
+                <p class="fs-5"> Even though we in the computing community expect students to make mistakes, struggle
+                    with errors, have to look things up, ask for help, etc. when learning to program, <i>students
+                        think they are doing poorly when they engage in these typical moments in the programming
                         process!</i> <b>Why is this happening, and how can we help students set more realistic
                         expectations
                         for their
@@ -202,23 +202,58 @@
                         potential
                         collaborations!</i></p>
         </div>
+        <div class="container">
+            <h2 id="organizers">Organizers</h1>
+
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 col-lg-4">
+                        <div class="card">
+                            <img class="card-img-top" src="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. Eleanor "Nell" O'Rourke</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Assistant Professor, Computer Science and
+                                    Learning
+                                    Sciences, Northwestern University
+                                </h6>
+                                <p class="card-text"></p>
+                                <a href="http://eleanorourke.com/" target="_blank" class="btn btn-primary">Website</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-4">
+                        <div class="card">
+                            <img class="card-img-top" src="https://melissaychen.com/assets/images/profile.jpg">
+                            <div class="card-body">
+                                <h5 class="card-title">Melissa Chen (she/her)</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">PhD Student, Computer Science, Northwestern
+                                    University
+                                </h6>
+                                <p class="card-text">Melissa is a PhD student studying computer science in the <a
+                                        href="https://delta.northwestern.edu/" target="_blank">Delta Lab</a> at
+                                    Northwestern
+                                    University. Her work is on understanding how students evaluate their programming
+                                    abilities,
+                                    and
+                                    how to design social and technical interventions to help students develop more
+                                    accurate
+                                    expectations
+                                    for their programming abilities. </p>
+                                <a href="https://melissaychen.com/" target="_blank" class="btn btn-primary">Website</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+        </div>
 
         <div class="container">
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-muted">Self-assessment workshop | <a href="https://delta.northwestern.edu/"
-                        target="_blank">Delta Lab</a></p>
-
-                <a href="/"
-                    class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32">
-                        <use xlink:href="#bootstrap" />
-                    </svg>
-                </a>
-
-                <ul class="nav col-md-3 justify-content-end">
-                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-                    <li class="nav-item"><a href="details.html" class="nav-link px-2 text-muted">Details</a></li>
-                    <li class="nav-item"><a href="research.html" class="nav-link px-2 text-muted">Research</a></li>
+            <footer class="py-3 my-4">
+                <ul class="nav justify-content-center border-top pb-3 mb-3">
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                    <li class="nav-item"><a href="details.html" class="nav-link px-2 text-body-secondary">Details</a>
+                    </li>
+                    <li class="nav-item"><a href="research.html" class="nav-link px-2 text-body-secondary">Research</a>
+                    </li>
                 </ul>
             </footer>
         </div>
