--- a/research.html
+++ b/research.html
@@ -114,21 +114,11 @@
     </div>
 
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-muted">Self-assessment workshop | <a href="https://delta.northwestern.edu/"
-                    target="_blank">Delta Lab</a></p>
-
-            <a href="/"
-                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap" />
-                </svg>
-            </a>
-
-            <ul class="nav col-md-3 justify-content-end">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="details.html" class="nav-link px-2 text-muted">Details</a></li>
-                <li class="nav-item"><a href="research.html" class="nav-link px-2 text-muted">Research</a></li>
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-top pb-3 mb-3">
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="details.html" class="nav-link px-2 text-body-secondary">Details</a></li>
+                <li class="nav-item"><a href="research.html" class="nav-link px-2 text-body-secondary">Research</a></li>
             </ul>
         </footer>
     </div>
