Add Nell's bio and headshot

--- a/index.html
+++ b/index.html
@@ -211,14 +211,25 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-4 col-lg-4">
                         <div class="card">
-                            <img class="card-img-top" src="...">
+                            <img class="card-img-top" src="assets/ORourke_headshot.jpg">
                             <div class="card-body">
                                 <h5 class="card-title">Dr. Eleanor "Nell" O'Rourke</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Assistant Professor, Computer Science and
                                     Learning
                                     Sciences, Northwestern University
                                 </h6>
-                                <p class="card-text"></p>
+                                <p class="card-text">Eleanor "Nell" O'Rourke is an Assistant Professor in Computer
+                                    Science and the Learning Sciences at Northwestern University, where she co-directs
+                                    the interdisciplinary Delta Lab. Her research explores the design of novel
+                                    computational systems to support motivation and learning in STEM domains. Recent
+                                    projects include studying student beliefs about programming ability in introductory
+                                    computer science courses, designing game mechanics that encourage students to
+                                    practice effective problem-solving skills, and developing web inspection tools that
+                                    allow novice developers to learn directly from authentic professional websites. Her
+                                    interventions have been used by over 100,000 students online, adopted by companies,
+                                    and integrated into classrooms. Her work has been recognized through an NSF CAREER
+                                    Award, a Google Systems Research Award, and best paper awards and nominations at
+                                    SIGCSE, UIST, and CHI.</p>
                                 <a href="http://eleanorourke.com/" target="_blank" class="btn btn-primary">Website</a>
                             </div>
                         </div>
