Fix agenda links

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             accurately
                             evaluate their ability.</p>
 
-                        <p><a href="#agenda1">Day 1 agenda</a></p>
+                        <p><a href="details.html#agenda1">Day 1 agenda</a></p>
                     </div>
                     <div class="col">
 
@@ -140,7 +140,7 @@
                             the
                             designs
                             developed during the previous session.</p>
-                        <p><a href="#agenda2">Day 2 agenda</a></p>
+                        <p><a href="details.html#agenda2">Day 2 agenda</a></p>
                     </div>
                 </div>
 
