--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="container">
 
-            <h2 id="summary">Workshop summary</h1>
+            <h2 id="summary">Virtual workshop summary</h1>
                 <div class="row">
                     <div class="col">
                         <p><b>Session 1: August 7, 2024 @ 12-3 PM CDT (UTC-5) (<a
